--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,16 +5,16 @@ project(university-db)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Include(FetchContent)
+Include(FetchContent)
 
-# include(FetchContent)
-# FetchContent_Declare(
-#   googletest
-#   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-# )
-# # For Windows: Prevent overriding the parent project's compiler/linker settings
-# set(GTEST_FORCE_SHARED_CRT ON CACHE BOOL "" FORCE)
-# FetchContent_MakeAvailable(googletest)
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
 set(SRC_LIST
     src/address.cpp
@@ -26,11 +26,11 @@ add_library(${PROJECT_NAME}-lib STATIC ${SRC_LIST})
 add_executable(${PROJECT_NAME} src/main.cpp)
 target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib )
 
-# enable_testing()
+enable_testing()
 
-# add_executable(${PROJECT_NAME}-ut test/PizzeriaTest.cpp)
-# target_link_libraries(${PROJECT_NAME}-ut ${PROJECT_NAME}-lib GTest::gtest_main GTest::gmock)
+add_executable(${PROJECT_NAME}-ut tests/tests.cpp)
+target_link_libraries(${PROJECT_NAME}-ut ${PROJECT_NAME}-lib GTest::gtest_main)
 
-# include(GoogleTest)
-# gtest_discover_tests(${PROJECT_NAME}-ut)
-# add_test(NAME runTests COMMAND ${PROJECT_NAME}-ut)
+include(GoogleTest)
+gtest_discover_tests(${PROJECT_NAME}-ut)
+add_test(NAME runTests COMMAND ${PROJECT_NAME}-ut)
